Changing the style of the website

--- a/index.html
+++ b/index.html
@@ -6,21 +6,20 @@
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
-<body>
+<body dir="rtl">
 
 
 <div class="quiz-container">
-  <h1 class="quiz-title">My Tinny Quiz App 🌸</h1>
-
+  <h1 class="quiz-title">My Tinny sad and real Quiz 🌿✊</h1>
+<hr>
   <form id="quizForm">
-
-  
-    <button type="submit" class="submit-btn" >Submit</button>
-  </form>
-
+  <div id="questions"></div>
+  <button type="button" id="submit-btn" class="submit-btn">إرسال</button>
+  <button type="button" id="clear-btn">حذف الإجابات</button>
+</form>
   <div class="result" id="result"></div>
 </div>
 
-    <script src="script.js"></script>
+    <script type="module" src="script.js" ></script>
 </body>
 </html>
